--- a/app/views/main/about.html.erb
+++ b/app/views/main/about.html.erb
@@ -22,7 +22,7 @@
   		<div class="col-md-12">
       <figure class="about_para">
      <h1 class="about_header">ABOUT ME</h1>
-  		<h5>It all started when I figured out how to change the background color of my Xanga website. Back then I thought to myself, "I'm a web designer!" Little did I know how challenging and fun it is to build a website from scratch...</h5> <h5>I graduated with a Bachelor's of Science Degree in Family & Consumer Sciences: Design and Merchandising. After graduating, I worked in the fashion industry as a Production Coordinator/Designer. To further develop my skills, I decided to attend Coding Dojo, an intensive 14-week web development program with a curriculum focused on three full stacks.</h5>
+  		<h5 class='abouts'>It all started when I figured out how to change the background color of my Xanga website. Back then I thought to myself, "I'm a web designer!" Little did I know how challenging and fun it is to build a website from scratch...</h5> <h5 class='abouts'>I graduated with a Bachelor's of Science Degree in Family & Consumer Sciences: Design and Merchandising. After graduating, I worked in the fashion industry as a Production Coordinator/Designer. To further develop my skills, I decided to attend Coding Dojo, an intensive 14-week web development program with a curriculum focused on three full stacks.</h5>
   		</div>
       </figure>
 	</div>
@@ -75,8 +75,6 @@
 </div>
 <br><br>
 
-
-
 <div class="row">
 
   <center>
@@ -118,12 +116,13 @@
   		<div class="col-md-12">
       <figure class="facts_para">
       <h1 class="about_header underlined">RANDOM</h1>
-      <p>I was born in Seoul, South Korea.</p>
-      <p>My favorite movie is the Transformers.</p>
-      <p>I collect Funko Pop! Vinyl Figures.</p>
-      <p>I like to play video games.</p>
-      <p>I was in marching band for four years.</p>
-      <p>I sell handmade bow ties on Etsy.</p>
+      <h5 class='abouts'>I was born in Seoul, South Korea.</h5>
+      <h5 class='abouts'>My favorite movie is the Transformers.</h5>
+      <h5 class='abouts'>I collect Funko Pop! Vinyl Figures.</h5>
+      <h5 class='abouts'>I like to play video games.</h5>
+      <h5 class='abouts'>I was in marching band for four years.</h5>
+      <h5 class='abouts'>I sell handmade bow ties on Etsy.</h5>
+      <br><br>
       </figure>
       </div>
 	</div>
