--- a/app/views/projects/frame.html.erb
+++ b/app/views/projects/frame.html.erb
@@ -31,20 +31,16 @@
 		@media (max-width: 543px) {
 			.navbar {
 				background: black;
-				height: 80px;
 			}
 			#picture {
-				display: none;
-			}
-			#logos {
-				display: none;
-			}
-			#logo_top {
 				display: none;
 			}
 			.container {
 				margin-top: 50px;
 			}
+            .navbar-toggler {
+                display: none;
+            }
 		}
 		.navbar-brand>img {
 			width: 200px;
@@ -80,10 +76,13 @@
 			transform: translateX(0px);
 		}
 		.header {
-			font-size: 4em;
-			border-bottom: 2px solid gray;
-			width: 400px;
+			font-size: 3.5em;
+			border-bottom: 3px solid gray;
+			width: 80%;
 			font-weight: bolder;
+		}
+		#phone {
+			border: none;
 		}
 
 
@@ -97,8 +96,8 @@
 		  <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2">
 		    &#9776;
 		  </button>
-		  <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">
-		    <a class="navbar-brand" href="/"><img src="/assets/logo.png" class="navbar-brand img-responsive" id="logo_top"></a>
+<!-- 		  <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2"> -->
+		    <a class="navbar-brand" href="/"><img src="/assets/logo.png" class="navbar-brand img-responsive"></a>
 		    <ul class="nav navbar-nav navbar-right">
 		      <li class="nav-item active">
 		        <a class="nav-link" href="/main/about" id="about">About</a>
@@ -122,11 +121,11 @@
    <h6>Created with MEAN stack: Javascript, MongoDB, Angular, Node.JS, Express.JS, Photoshop, Illustrator, Sketch</h6><br>
    <div id="pictures">
    <figure class="friends">
-   <img src="/assets/frame01.png" class="examples">
-   <img src="/assets/frame02.png" class="examples">
+   <img src="/assets/frame_phone.png" class="examples" id="phone"><br><br>
    <img src="/assets/frame03.png" class="examples">
    <img src="/assets/frame04.png" class="examples">
    <img src="/assets/frame05.png" class="examples">
+   <img src="/assets/frame02.png" class="examples">
    </figure>
    </div>
    <br><br>
