--- a/app/views/projects/friends.html.erb
+++ b/app/views/projects/friends.html.erb
@@ -31,16 +31,6 @@
 		@media (max-width: 543px) {
 			.navbar {
 				background: black;
-				height: 80px;
-			}
-			#picture {
-				display: none;
-			}
-			#logos {
-				display: none;
-			}
-			#logo_top {
-				display: none;
 			}
 			.container {
 				margin-top: 50px;
@@ -80,9 +70,9 @@
 			transform: translateX(0px);
 		}
 		.header {
-			font-size: 4em;
-			border-bottom: 2px solid gray;
-			width: 400px;
+			font-size: 3.5em;
+			border-bottom: 3px solid gray;
+			width: 80%;
 			font-weight: bolder;
 		}
 
@@ -97,7 +87,7 @@
 		  <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2">
 		    &#9776;
 		  </button>
-		  <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">
+<!-- 		  <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2"> -->
 		    <a class="navbar-brand" href="/"><img src="/assets/logo.png" class="navbar-brand img-responsive" id="logo_top"></a>
 		    <ul class="nav navbar-nav navbar-right">
 		      <li class="nav-item active">
@@ -127,9 +117,7 @@
    </figure>
    </div>
    <br><br>
-
-
-   <a id="button" href="http://52.37.165.165/">PUBLIC IP (AWS)</a>
+   
    <a id="button" href="https://github.com/joannehkim/Friends">VIEW ON GITHUB</a>
 </div>
 
