--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,11 +1,59 @@
+    <style type="text/css">
+        body {
+            background-image: url("/assets/background.png");
+            background-size: 100% auto;
+            background-repeat: no-repeat;
+        }
+        @media (max-width: 1090px) {
+            .navbar {
+            background: black;
+            border-radius: 0px;
+            height: 150px;
+            }
+        }
+        @media (max-width: 800px) {
+            #picture {
+            display: none;
+            }
+            #intro {
+                font-size: 1.3em;
+            }
+            #logos {
+                display: none;
+            }
+            div.row {
+                margin-top: 100px;
+            }
+        }
+/*        @media (max-width: 700px) {
+            div.row {
+                margin-top: 100px;
+            }
+        }*/
+        @media (max-width: 543px) {
+            .navbar {
+                background-color: black;
+            }
+            #intro {
+                font-size: 1.5em;
+            }
+            #description {
+                font-size: 1em;
+            }
+            .navbar-toggler {
+                display: none;
+            }
+
+        }
+        </style>
 <div id="wrapper" class="contact_new">
 	<nav>
 		<nav class="navbar navbar-custom">
 		  <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2">
 		    &#9776;
 		  </button>
-		  <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">
-		    <a class="navbar-brand" href="/"><img src="/assets/logo.png" class="navbar-brand img-responsive" id="logo_top"></a>
+<!-- 		  <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2"> -->
+		    <a class="navbar-brand" href="/"><img src="/assets/logo.png" class="navbar-brand img-responsive"></a>
 		    <ul class="nav navbar-nav navbar-right">
 		      <li class="nav-item active">
 		        <a class="nav-link" href="/main/about" id="about">About</a>
@@ -29,7 +77,7 @@
   </div>
 
 
-<div class="container contact_form">
+<div class="container">
     <div class="row">
             <div class="col-md-4 col-md-offset-1">
             	<legend><h3 class="header">Have a Question?<br>Contact me!</h3></legend>
