--- a/app/views/main/contact.html.erb
+++ b/app/views/main/contact.html.erb
@@ -32,7 +32,7 @@
 		.navbar-right {
    			float: right;
 		}
-		@media (max-width: 543px) {
+/*		@media (max-width: 543px) {
 			.navbar {
 				background: black;
 				height: 80px;
@@ -49,7 +49,7 @@
 			.container {
 				margin-top: 50px;
 			}
-		}
+		}*/
 		.navbar-brand>img {
 			width: 200px;
 		}
