--- a/app/views/projects/gold_game.html.erb
+++ b/app/views/projects/gold_game.html.erb
@@ -31,20 +31,13 @@
 		@media (max-width: 543px) {
 			.navbar {
 				background: black;
-				height: 80px;
-			}
-			#picture {
-				display: none;
-			}
-			#logos {
-				display: none;
-			}
-			#logo_top {
-				display: none;
 			}
 			.container {
 				margin-top: 50px;
 			}
+            .navbar-toggler {
+                display: none;
+            }
 		}
 		.navbar-brand>img {
 			width: 200px;
@@ -81,9 +74,9 @@
 			transform: translateX(0px);
 		}
 		.header {
-			font-size: 4em;
-			border-bottom: 2px solid gray;
-			width: 400px;
+			font-size: 3.5em;
+			border-bottom: 3px solid gray;
+			width: 80%;
 			font-weight: bolder;
 		}
 
@@ -98,8 +91,8 @@
 		  <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2">
 		    &#9776;
 		  </button>
-		  <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">
-		    <a class="navbar-brand" href="/"><img src="/assets/logo.png" class="navbar-brand img-responsive" id="logo_top"></a>
+<!-- 		  <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2"> -->
+		    <a class="navbar-brand" href="/"><img src="/assets/logo.png" class="navbar-brand img-responsive"></a>
 		    <ul class="nav navbar-nav navbar-right">
 		      <li class="nav-item active">
 		        <a class="nav-link" href="/main/about" id="about">About</a>
